
 */
 
 Short descrition
 + New Function
 * Updated Function
 - Removed Function
 
Changes in 1.2.0
* column size of the feed table rearranged to the needed space
* locale in configuration is now used to set langauge of the resource bundle
+ added new splash screen, help image and icon
+ maven-property for versioning
* moved projects into root
 
Changes in 1.1.0
* splitting the project into submodules
+ if no url in rss entry, the read button is disabled
+ new UI
+ extract model
* headercomment update
+ Add Feed InternalFrame
+ ConfigurationModel Interface
* refactored model to match jpa
- ConfigurationModel Interface
+ ConfigurationModel
* moved SingleTimeFrame
+ added SingleTimeFrameValidator and extraced validation from SingleTimeFrame to it
* alter new ui adding public getter
+ skeletion of ConfigController
- cleanup in ReferenceCollection
- removed unused classes (Balloon, BrowserHandler)
- removed old ConfigFrame, ConfigFrameActionListener, ConfigFrameCaptions
* altered hibernate.cfg.xml to point to new model
* changed configmenu button to new ui
+ read properties into model at startup
+ implemented the configurationcontroller
+ adding a new module to extract the configuraion facilities
- cleanup startup
+ new implementation of TimeValidation
+ adding interface to prepare an error handling system
+ connecting configmodel with new ui
* connected new ui elements
* validation of feed url integrated in new ui
- removed obsolet classes: COuntManager, DBCleaner, FeedTableModel
* moved DAO Classes and hibernate configuration to model modul
* moved FeedTableValidator to gui modul
- removed configControl, sessionFactory, feedTable from ReferenceCollection
* refactord time validation
+ configuration now persists
+ TableModel is now generated from config to be placed in the gui
* gui now loads data from the config and gives data back
+ timerestrictions are now disabled on the gui if not activated
- removed debug var, and set root logginglevel