@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Fri Jul 22 20:22:09 CEST 2011
-buildNumber=218
+#Sun Jul 31 13:57:28 CEST 2011
+buildNumber=224
