@@ -25,5 +25,12 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+  	<dependency>
+  		<groupId>at.nullpointer</groupId>
+  		<artifactId>trayrss-desk-error</artifactId>
+  		<version>1.2.0-SNAPSHOT</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
   </dependencies>
 </project>
