@@ -1,4 +1,4 @@
-#Sat Jul 30 13:34:36 CEST 2011
+#Sat Jul 30 13:31:08 CEST 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
