@@ -1,0 +1,14 @@
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>trayrss-desk</artifactId>
+    <groupId>at.nullpointer</groupId>
+    <version>1.2.0-SNAPSHOT</version>
+  </parent>
+  <groupId>at.nullpointer</groupId>
+  <artifactId>trayrss-desk-error</artifactId>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <trayrss-parent-version>1.2.0-SNAPSHOT</trayrss-parent-version>
+  </properties>
+</project>
