@@ -1,0 +1,12 @@
+package at.nullpointer.trayrss.error;
+
+import javax.swing.JOptionPane;
+
+public class ErrorType {
+	public static final int ERROR_MESSAGE = JOptionPane.ERROR_MESSAGE;
+	public static final int INFORMATION_MESSAGE = JOptionPane.INFORMATION_MESSAGE;
+	public static final int PLAIN_MESSAGE = JOptionPane.PLAIN_MESSAGE;
+	public static final int QUESTION_MESSAGE = JOptionPane.QUESTION_MESSAGE;
+	public static final int WARNING_MESSAGE = JOptionPane.WARNING_MESSAGE;
+
+}
