@@ -1,10 +1,10 @@
 #Eclipse messages class
-#Sun Jun 26 14:34:56 CEST 2011
-config.feedinfo.monitoringEnabled.label=Monitoring Enabled
+#Sun Jul 31 14:52:42 CEST 2011
 config.feedinfo.cancel.button=Cancel
 config.feedinfo.feedName.label=Feed Name
 config.feedinfo.feedUrl.label=Feed URL
 config.feedinfo.monitorIntervall.label=Monitor Intervall
+config.feedinfo.monitoringEnabled.label=Monitoring Enabled
 config.feedinfo.save.button.save=Save
 config.feedinfo.title=TrayRSS - Feed Info
 config.feeds.button.addfeed=Add Feed
@@ -38,3 +38,7 @@ config.window.button.cancel=Cancel
 config.window.button.save=Save
 config.window.displaytime.tooltip=unit is seconds
 config.window.title=TrayRSS - Configuration
+error.feedinfo.name=Feed Name Error
+error.feedinfo.name.text=No empty feed name allowed\!
+error.feedinfo.url=Invalid Feed URL
+error.feedinfo.url.text=URL is not found or is not a valid Feed
