@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Sun Jun 26 12:55:55 CEST 2011
+#Sun Jul 31 14:52:42 CEST 2011
 config.feedinfo.cancel.button=Abbrechen
 config.feedinfo.feedName.label=Feed Bezeichnung
 config.feedinfo.feedUrl.label=Feed URL
@@ -37,3 +37,7 @@ config.window.button.cancel=Abbrechen
 config.window.button.save=Speichern
 config.window.displaytime.tooltip=in Sekunden
 config.window.title=TrayRSS - Konfiguration
+error.feedinfo.name=fehlender Feed Name
+error.feedinfo.name.text=Das Feld Feed Name muss bef\u00FCllt sein.
+error.feedinfo.url=Ung\u00FCltige Feed URL
+error.feedinfo.url.text=URL wurde nicht gefunden, oder ist kein g\u00FCltiger Feed
