@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Sun Jun 26 12:55:55 CEST 2011
+#Sun Jul 31 14:52:42 CEST 2011
 config.feedinfo.cancel.button=Cancel
 config.feedinfo.feedName.label=Feed Name
 config.feedinfo.feedUrl.label=Feed URL
@@ -37,3 +37,7 @@ config.window.button.cancel=Cancel
 config.window.button.save=Save
 config.window.displaytime.tooltip=unit is seconds
 config.window.title=TrayRSS - Configuration
+error.feedinfo.name=Feed Name Error
+error.feedinfo.name.text=No empty feed name allowed\!
+error.feedinfo.url=Invalid Feed URL
+error.feedinfo.url.text=URL is not found or is not a valid Feed
